--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="container banner">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
-              <h6 class="text-success fs-6 mt-5 ms-lg-3" id="text-animation"></h6>
+              <h6 class="text-success fs-6 mt-5 text-animation" id="text-animation"></h6>
               <h2 class="mt-3 text-fs">
                 សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
                   class="text-success"
