--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
                 <!-- Me -->
                 <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                   <div class="card card-member">
-                    <img src="assets/chhorng/img/pfp icon.jpg" class="card-img object-fit-cover" style="height: 245px;"
+                    <img src="assets/chhorng/img/chhorng-ai2.jpg" class="card-img object-fit-cover" style="height: 245px;"
                       alt="">
                     <div class="card-body">
                       <div class="card-title">
