--- a/be_eco.html
+++ b/be_eco.html
@@ -50,12 +50,12 @@
 </head>
 
 <body>
-        <header>
+    <header>
       <nav
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -64,7 +64,6 @@
               alt="logo"
             />
           </a>
-
           <div
             class="offcanvas offcanvas-start"
             tabindex="-1"
@@ -128,11 +127,25 @@
                     </li>
                   </ul>
                 </li>
+                <li class="nav-item dropdown fs-5">
+                <a class="nav-link nav-hover no-caret dropdown-toggle" href="donation.html" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  សកម្មភាពសង្គម
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="event.html">ព្រឹត្តិការណ៍</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="donation.html">បរិច្ចាគ
+                    </a>
+                  </li>
+                </ul>
+              </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
-                </li>
-                <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
+                  <a class="nav-link nav-hover" href="e-commerce.html"
+                    >ផលិតផលកែច្នៃ</a
+                  >
                 </li>
                 <li class="nav-item fs-5">
                   <a
@@ -146,7 +159,7 @@
             </div>
           </div>
           <div class="user-profile d-flex align-items-center">
-            <button
+            <!-- <button
               class="navbar-toggler border-0 shadow-none fs-4"
               type="button"
               data-bs-toggle="offcanvas"
@@ -155,7 +168,7 @@
               aria-label="Toggle navigation"
             >
               <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
             <!-- Search Button -->
             <form class="d-flex" role="search">
               <input
@@ -334,6 +347,16 @@
                 </li>
               </ul>
             </div>
+            <button
+              class="navbar-toggler border-0 shadow-none fs-4"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
         </div>
       </nav>
@@ -412,7 +435,7 @@
       </p>
     </section>
 
-      <h2><i class="bi bi-geo-alt-fill"></i>ទីតាំងបរិច្ចាគ</h2>
+      <h2><i class="bi bi-geo-alt-fill text-danger"></i>ទីតាំងបរិច្ចាគ</h2>
 
     <div class="accordion" id="locationsAccordion">
   <div class="accordion-item">
