--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           <div class="user-profile d-flex align-items-center">
             <!-- Search Button -->
-            <form class="d-flex d-none d-md-block" role="search">
+            <form class="d-flex d-none d-md-block mx-3" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
