--- a/event.html
+++ b/event.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <header>
+        <header>
       <nav
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
@@ -45,7 +45,6 @@
               alt="logo"
             />
           </a>
-
           <div
             class="offcanvas offcanvas-start"
             tabindex="-1"
@@ -74,9 +73,9 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search Button -->
-                <form class="d-flex mb-2" role="search">
+                <form class="d-flex mb-2 d-block d-md-none" role="search">
                   <input
-                    class="form-control search-1 d-md-none"
+                    class="form-control"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
@@ -84,7 +83,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link fs-5 nav-hover"
+                    class="nav-link active fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -111,7 +110,7 @@
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link nav-hover active no-caret dropdown-toggle"
+                    class="nav-link nav-hover no-caret dropdown-toggle"
                     href="donation.html"
                     role="button"
                     data-bs-toggle="dropdown"
@@ -150,9 +149,9 @@
           </div>
           <div class="user-profile d-flex align-items-center">
             <!-- Search Button -->
-            <form class="d-flex" role="search">
+            <form class="d-flex d-none d-md-block" role="search">
               <input
-                class="form-control mx-2 search-2"
+                class="form-control mx-2"
                 type="search"
                 placeholder="Search"
                 aria-label="Search"
@@ -294,35 +293,45 @@
 
             <div class="dropdown">
               <img
-                src="assets/image/avatar-guest.webp"
+                src="assets/image/avatar-4.jpg"
                 alt=""
-                class="avatar dropdown-toggle no-caret rounded-circle ms-2"
+                class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               />
-              <ul class="dropdown-menu dropdown-menu-center">
-                <div
-                  class="notifi d-flex align-items-center border-bottom px-2"
-                >
-                  <h5>Notification</h5>
-                </div>
-                <a
-                  href=""
-                  class="text-decoration-none py-2 pe-2 m-0 float-end"
-                  style="font-size: 14px"
-                  >See all</a
-                >
+              <ul class="dropdown-menu dropdown-menu-center py-0">
+                <li class="notifi border-bottom">
+                  <a
+                    href=""
+                    class="dropdown-item d-flex align-items-center py-2"
+                  >
+                    <img
+                      src="assets/image/avatar-4.jpg"
+                      alt=""
+                      class="avatar dropdown-toggle rounded-circle mx-2"
+                      style="width: 35px; height: 35px"
+                    />
+                    <h6 class="mb-0 mt-1">Nazaby</h6>
+                  </a>
+                </li>
+
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="light" href="#">
-                    <i class="bi bi-brightness-high"></i>
-                    <span class="ms-2">Light</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-person-circle"></i>
+                    <span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="dark" href="#">
-                    <i class="bi bi-moon"></i>
-                    <span class="ms-2">Dark</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-gear"></i>
+                    <span class="ms-2">ការកំណត់</span>
+                  </a>
+                </li>
+                <li class="border-top">
+                  <a class="dropdown-item py-2" href="landing.html">
+                    <i class="bi bi-box-arrow-in-left"></i>
+                    <span class="ms-2">ចាក់ចេញ</span>
                   </a>
                 </li>
               </ul>
