--- a/about.html
+++ b/about.html
@@ -279,8 +279,8 @@
                 <!-- Me -->
                 <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                   <div class="card card-member">
-                    <img src="assets/chhorng/img/chhorng-ai2.jpg" class="card-img object-fit-cover" style="height: 245px;"
-                      alt="">
+                    <img src="assets/chhorng/img/chhorng-ai2.jpg" class="card-img object-fit-cover"
+                      style="height: 245px;" alt="">
                     <div class="card-body">
                       <div class="card-title">
                         <h4 class="fs-5">Kimchhorng</h4>
@@ -373,11 +373,9 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -404,40 +402,40 @@
                 <div class="mb-3 text-success">
                   <i class="fa-solid fa-recycle fa-2x"></i>
                 </div>
-                <h5 class="card-title fw-bold">ហេតុអ្វីត្រូវកែច្នៃកាកសំណល់?</h5>
+                <h5 class="card-title fw-bold">កែច្នៃកាកសំណល់?</h5>
                 <p class="card-text text-secondary">
-                  ការកែច្នៃកាកសំណល់ ជួយកាត់បន្ថយមលស្អុយ សន្សំថាមពល និងការពារពិភពលោករបស់យើង។
+                  ការកែច្នៃកាកសំណល់ជួយកាត់បន្ថយស្អុយសន្សំថាមពលកាត់បន្ថយការបំពុលរក្សាបរិស្ថានបៃតងនិងការពារផែនដី។
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Card 2 -->
-          <div class="col-6 col-md-4 m-auto" data-aos="zoom-in-up">
+          <div class="col-6 col-md-4 m-auto " data-aos="zoom-in-up">
             <div class="card h-100 shadow-sm border-0">
               <div class="card-body text-center">
                 <div class="mb-3 text-primary">
                   <i class="fa-solid fa-users fa-2x"></i>
                 </div>
                 <h5 class="card-title fw-bold">អ្វីដែលយើងធ្វើ</h5>
-                <p class="card-text text-muted">
-                  យើងបង្កើតវេទិកាឌីជីថល ដែលផ្តល់មាតិកាអប់រំ គន្លឹះក្នុងការកែច្នៃកាកសំណល់
-                  និងឧបករណ៍ដើម្បីធ្វើឱ្យទម្លាប់ប្រកបដោយមិត្តភាពបរិស្ថានកាន់តែងាយស្រួល។
+                <p class="card-text text-secondary">
+                  យើងបង្កើតវេទិកាឌីជីថលដែលផ្តល់មាតិកាអប់រំគន្លឹះក្នុងការកែច្នៃកាកសំណល់
+                  និងឧបករណ៍ដើម្បីធ្វើឱ្យកាន់តែងាយស្រួល។
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Card 3 -->
-          <div class="col-6 col-md-4 m-auto" data-aos="zoom-in-left">
+          <div class="col-6 col-md-4 m-auto " data-aos="zoom-in-left">
             <div class="card h-100 shadow-sm border-0">
               <div class="card-body text-center">
                 <div class="mb-3 text-warning">
                   <i class="fa-solid fa-leaf fa-2x"></i>
                 </div>
                 <h5 class="card-title fw-bold">តម្លៃរបស់យើង</h5>
-                <p class="card-text">
-                  ចីរភាព ការធ្វើការជាក្រុម និងការច្នៃប្រឌិត គឺជាអ្វីដែលណែនាំយើង ក្នុងការបង្កើតដំណោះស្រាយ
+                <p class="card-text text-secondary">
+                  ចីរភាពការធ្វើការជាក្រុមនិងការច្នៃប្រឌិតគឺជាអ្វីដែលណែនាំយើងក្នុងការបង្កើតដំណោះស្រាយ
                   ដើម្បីជួយការពារបរិស្ថាន។
                 </p>
               </div>
@@ -452,9 +450,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-6 col-lg-6 bg-dark position-relative" style="height: 180px;" data-aos="fade-right">
-            <h1 class="text-light text-center pt-8">អំពីពួកយើង</h1>
+            <h1 class="text-light text-center row justify-content-center align-items-center "
+              style="line-height: 180px;">អំពីពួកយើង</h1>
             <div class="bg-primary">
-              <div class="triangle col-6"></div>
+              <div class="triangle col-6 d-none d-md-block"></div>
             </div>
           </div>
           <div class="col-6 col-lg-6 bg-success" data-aos="fade-left">
@@ -463,8 +462,7 @@
                 <p class="text-center text-light">
                   យើងបង្កើតវេបសាយអំពី ពួកយើងជាក្រុមអ្នកបង្កើតដែលមានចិត្តស្រឡាញ់
                   ឧស្សាហ៍ព្យាយាមក្នុងការបង្កើតដំណោះស្រាយឌីជីថល ដើម្បីគាំទ្រអនាគតស្អាត និងបៃតងជាងមុន។
-                  ការផ្តោតសំខាន់របស់យើងគឺលើការយល់ដឹងអំពីការកែច្នៃកាកសំណល់ និងការរស់នៅប្រកបដោយចីរភាព។ តាមរយៈវេបសាយរបស់យើង
-                  យើងមានបំណង៖ បង្រៀនមនុស្សអំពីសារៈសំខាន់នៃការកែច្នៃកាកសំណល់ ចែករំលែកវិធីសាមញ្ញ
+                  តាមរយៈវេបសាយរបស់យើងយើងមានបំណង៖ បង្រៀនមនុស្សអំពីសារៈសំខាន់នៃការកែច្នៃកាកសំណល់ ចែករំលែកវិធីសាមញ្ញ
                   និងអនុវត្តបានក្នុងការកាត់បន្ថយកាកសំណល់ និងផ្តល់ឧបករណ៍ និងធនធាន
                   ដើម្បីធ្វើឱ្យការកែច្នៃកាកសំណល់កាន់តែងាយស្រួលសម្រាប់មនុស្សគ្រប់រូប។
                 </p>
