--- a/event.html
+++ b/event.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-        <header>
+    <header>
       <nav
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
@@ -83,7 +83,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link active fs-5 nav-hover"
+                    class="nav-link fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -104,13 +104,13 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">វីដេអូ</a>
+                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link nav-hover no-caret dropdown-toggle"
+                    class="nav-link nav-hover active no-caret dropdown-toggle"
                     href="donation.html"
                     role="button"
                     data-bs-toggle="dropdown"
