--- a/donation.html
+++ b/donation.html
@@ -169,7 +169,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link active fs-5 nav-hover"
+                    class="nav-link fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -190,13 +190,13 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">វីដេអូ</a>
+                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link nav-hover no-caret dropdown-toggle"
+                    class="nav-link active nav-hover no-caret dropdown-toggle"
                     href="donation.html"
                     role="button"
                     data-bs-toggle="dropdown"
