--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">វីដេអូ</a>
+                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
