--- a/e-commerce.html
+++ b/e-commerce.html
@@ -74,7 +74,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link active fs-5 nav-hover"
+                    class="nav-link fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -123,7 +123,7 @@
                   </ul>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="e-commerce.html"
+                  <a class="nav-link active nav-hover" href="e-commerce.html"
                     >ផលិតផលកែច្នៃ</a
                   >
                 </li>
