--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <header>
       <nav
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
-        style="height: 70px"
       >
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -40,7 +39,7 @@
             id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel"
           >
-            <div class="offcanvas-header bg-nav" style="height: 70px">
+            <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="index.html">
                   <img
