--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/chhorng/style.css">
+    <link rel="stylesheet" href="assets/chhorng/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -21,9 +21,7 @@
   </head>
   <body>
     <header>
-      <nav
-        class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
-      >
+      <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
@@ -345,7 +343,10 @@
         <div class="container banner">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
-              <h6 class="text-success fs-6 mt-5 text-animation" id="text-animation"></h6>
+              <h6
+                class="text-success fs-6 mt-5 text-animation"
+                id="text-animation"
+              ></h6>
               <h2 class="mt-3 text-fs">
                 សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
                   class="text-success"
@@ -614,42 +615,141 @@
         </div>
       </section>
       <section class="section-comment py-8 position-relative">
-  <!-- Background image -->
-  <img
-    src="assets/image/banner-2.jpg"
-    alt=""
-    class="w-100 h-100 position-absolute top-0 start-0"
-    style="object-fit: cover; z-index: 1"
-  />
+        <!-- Background image -->
+        <img
+          src="assets/image/banner-2.jpg"
+          alt=""
+          class="w-100 h-100 position-absolute top-0 start-0"
+          style="object-fit: cover; z-index: 1"
+        />
 
-  <!-- Overlay -->
-  <div class="overlay-1"></div>
+        <!-- Overlay -->
+        <div class="overlay-1"></div>
 
-  <!-- Content -->
-  <div class="container position-relative z-3">
-    <div class="row justify-content-center text-center">
-      <div class="col-12">
-        <h2 class="scale-up-ver-center text-white mb-4 fw-bold">
-          តើអ្នកមានមតិយោបលយ៉ាងណាមកលើគេហទំព័ររបស់ពួកយើង?
-        </h2>
-      </div>
-      <div class="col-12 col-md-8 col-lg-6">
-        <form action="" class="comment-form p-4 rounded-4 shadow-lg">
-          <textarea
-            class="text-area rounded-3 p-3"
-            placeholder="មតិយោបល....."
-            rows="5"
-          ></textarea>
-          <button type="submit" class="btn submit-btn mt-3 w-100 bg-success">
-            ដាក់ស្នើ
-          </button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
-
+        <!-- Content -->
+        <div class="container position-relative z-3">
+          <div class="row justify-content-center text-center">
+            <div class="col-12">
+              <h2 class="scale-up-ver-center text-white mb-4 fw-bold">
+                តើអ្នកមានមតិយោបលយ៉ាងណាមកលើគេហទំព័ររបស់ពួកយើង?
+              </h2>
+            </div>
+            <div class="col-12 col-md-8 col-lg-6">
+              <form action="" class="comment-form p-4 rounded-4 shadow-lg">
+                <textarea
+                  class="text-area rounded-3 p-3"
+                  placeholder="មតិយោបល....."
+                  rows="5"
+                ></textarea>
+                <button
+                  type="submit"
+                  class="btn submit-btn mt-3 w-100 bg-success"
+                >
+                  ដាក់ស្នើ
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="bg-white pt-8 border-top">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="index.html"
+              class="footer-img mb-3 d-flex align-items-center"
+            >
+              <img
+                src="assets/image/green_leaves_round_logo.png"
+                alt="logo"
+                style="width: 50px"
+              />
+              <h4 class="ms-2 fw-bold text-success mb-0 mt-3">កែច្នៃ</h4>
+            </a>
+
+            <p class="text-secondary">
+              "Your seamless platform for event management, where creativity
+              meets efficiency. We simplify planning, coordinate every detail,
+              and bring your vision to life for unforgettable experiences that
+              inspire."
+            </p>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              ព័ត៌មានទំនាក់ទំនង
+            </h5>
+            <p class="mb-1">
+              <i class="bi bi-telephone me-2"></i>+855 12 123 456
+            </p>
+            <p class="mb-1">
+              <i class="bi bi-envelope me-2"></i>
+              <a href="mailto:info@gmail.com" class="text-dark"
+                >info@gmail.com</a
+              >
+            </p>
+            <!-- Social Media -->
+            <div class="d-flex gap-3 mt-3">
+              <a href="#" class="text-success"
+                ><i class="bi bi-facebook fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-twitter-x fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-telegram fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-instagram fs-4"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              តំណភ្ជាប់រហ័ស
+            </h5>
+            <div class="row">
+              <div class="col-6">
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="donation.html" class="footer-link d-block fs-5"
+                      >បរិច្ចាក</a
+                    >
+                  </li>
+                  <li>
+                    <a href="event.html" class="footer-link d-block fs-5"
+                      >ព្រឹត្តិការណ៍</a
+                    >
+                  </li>
+                  <li>
+                    <a href="about.html" class="footer-link d-block fs-5"
+                      >អំពីយើង</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Bottom bar -->
+        <div class="row border-top py-3 mt-4 align-items-center">
+          <div class="col-6 text-start">
+            <p class="mb-0 small text-secondary">© 2024 Recycle</p>
+          </div>
+          <div class="col-6 d-flex justify-content-end gap-3">
+            <a href="#" class="text-secondary small">Privacy Policy</a>
+            <a href="#" class="text-secondary small">FAQs</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
