--- a/event1.html
+++ b/event1.html
@@ -28,9 +28,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <style>
-      
-    </style>
   </head>
 
   <body>
@@ -350,7 +347,6 @@
         </div>
       </nav>
     </header>
-
     <!-- Hero Section -->
     <main>
       <section class="container my-4 py-5">
@@ -359,7 +355,7 @@
             <img
               src="assets/Kropum/img/event4.jpg"
               alt="Forest EcoPreneurs"
-              class="hero-banner img-fluid banner-event-1"
+              class="hero-banner img-fluid banner-event"
               style="width: 90%"
             />
           </div>
