--- a/minea.html
+++ b/minea.html
@@ -6,8 +6,8 @@
     <title>Education with Video</title>
     <!-- link css -->
     <link rel="stylesheet" href="assets/minea/css/minea.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
     <!-- link bs -->
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link
@@ -339,23 +339,30 @@
       <section class="mt-15">
         <div class="container bg-opacity-75 py-4 rounded-3">
           <div class="row gy-4">
-            <div class="col-md-6 col-lg-4 ">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt="" class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
                   ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
                   <a href="">See more</a>
                 </p>
-                
               </div>
             </div>
-              <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt="" class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
@@ -364,10 +371,14 @@
                 </p>
               </div>
             </div>
-              <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt="" class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
@@ -376,10 +387,14 @@
                 </p>
               </div>
             </div>
-              <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt="" class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
@@ -388,10 +403,14 @@
                 </p>
               </div>
             </div>
-              <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt=""  class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
@@ -400,10 +419,14 @@
                 </p>
               </div>
             </div>
-              <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
               <div class="card">
                 <div class="card-img p-2">
-                  <img src="assets/minea/img/maxresdefault.jpg" alt=""  class="rounded-3" />
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt=""
+                    class="rounded-3"
+                  />
                 </div>
                 <p class="card-text m-3">
                   ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
