--- a/pin.html
+++ b/pin.html
@@ -8,30 +8,8 @@
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/chhorng/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/theme.css">
-    <style>
-        /* Remove number input spinners */
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-
-        /* PIN input styling */
-        .pin-input {
-            width: 60px;
-            height: 60px;
-            font-size: 1.5rem;
-            text-align: center;
-            border: 2px solid #198754; /* Bootstrap success color */
-            border-radius: 0.5rem;
-        }
-    </style>
 </head>
 
 <body class="pin-page">
