--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link active fs-5 nav-hover"
+                    class="nav-link fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -132,7 +132,7 @@
                 </li>
                 <li class="nav-item fs-5">
                   <a
-                    class="nav-link nav-hover"
+                    class="nav-link active nav-hover"
                     aria-current="page"
                     href="about.html"
                     >អំពីយើង</a
