--- a/eventposting.html
+++ b/eventposting.html
@@ -4,43 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post New Event</title>
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: "Hanuman", sans-serif;
-        background: #f9fafb;
-        color: #333;
-      }
-
-      .card {
-        border-radius: 15px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
-    </style>
   </head>
 
   <body>
+    <!-- Navbar -->
     <header>
-      <nav
-        class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
-        style="height: 70px"
-      >
+      <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
@@ -56,7 +44,7 @@
             id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel"
           >
-            <div class="offcanvas-header bg-nav" style="height: 70px">
+            <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="index.html">
                   <img
@@ -78,9 +66,9 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search Button -->
-                <form class="d-flex mb-2" role="search">
+                <form class="d-flex mb-2 d-block d-md-none" role="search">
                   <input
-                    class="form-control search-1 d-md-none"
+                    class="form-control"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
@@ -109,7 +97,7 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">វីដេអូ</a>
+                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -153,20 +141,10 @@
             </div>
           </div>
           <div class="user-profile d-flex align-items-center">
-            <!-- <button
-              class="navbar-toggler border-0 shadow-none fs-4"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasNavbar"
-              aria-controls="offcanvasNavbar"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button> -->
             <!-- Search Button -->
-            <form class="d-flex" role="search">
+            <form class="d-flex d-none d-md-block me-3" role="search">
               <input
-                class="form-control mx-2 search-2"
+                class="form-control mx-2"
                 type="search"
                 placeholder="Search"
                 aria-label="Search"
@@ -308,35 +286,45 @@
 
             <div class="dropdown">
               <img
-                src="assets/image/avatar-guest.webp"
+                src="assets/image/avatar-4.jpg"
                 alt=""
-                class="avatar dropdown-toggle no-caret rounded-circle ms-2"
+                class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               />
-              <ul class="dropdown-menu dropdown-menu-center">
-                <div
-                  class="notifi d-flex align-items-center border-bottom px-2"
-                >
-                  <h5>Notification</h5>
-                </div>
-                <a
-                  href=""
-                  class="text-decoration-none py-2 pe-2 m-0 float-end"
-                  style="font-size: 14px"
-                  >See all</a
-                >
+              <ul class="dropdown-menu dropdown-menu-center py-0">
+                <li class="notifi border-bottom">
+                  <a
+                    href=""
+                    class="dropdown-item d-flex align-items-center py-2"
+                  >
+                    <img
+                      src="assets/image/avatar-4.jpg"
+                      alt=""
+                      class="avatar dropdown-toggle rounded-circle mx-2"
+                      style="width: 35px; height: 35px"
+                    />
+                    <h6 class="mb-0 mt-1">Nazaby</h6>
+                  </a>
+                </li>
+
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="light" href="#">
-                    <i class="bi bi-brightness-high"></i>
-                    <span class="ms-2">Light</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-person-circle"></i>
+                    <span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" data-bs-theme-value="dark" href="#">
-                    <i class="bi bi-moon"></i>
-                    <span class="ms-2">Dark</span>
+                  <a class="dropdown-item py-2" href="#">
+                    <i class="bi bi-gear"></i>
+                    <span class="ms-2">ការកំណត់</span>
+                  </a>
+                </li>
+                <li class="border-top">
+                  <a class="dropdown-item py-2" href="landing.html">
+                    <i class="bi bi-box-arrow-in-left"></i>
+                    <span class="ms-2">ចាក់ចេញ</span>
                   </a>
                 </li>
               </ul>
@@ -356,20 +344,19 @@
       </nav>
     </header>
 
+    <!-- Main Content -->
     <main>
       <section>
-        <div class="container mt-10">
+        <div class="container mt-13 mb-5">
           <div class="row justify-content-center">
-            <div class="col-8">
-              <div class="card">
+            <div class="col-lg-8 col-md-10">
+              <div class="card shadow-sm">
                 <div class="card-body">
-                  <h2 class="card-title text-center mt-2">ព្រឹត្តិការណ៍ថ្មី</h2>
+                  <h2 class="card-title text-center mb-4">ព្រឹត្តិការណ៍ថ្មី</h2>
                   <form>
                     <!-- Event Title -->
                     <div class="mb-3">
-                      <label for="itemName" class="form-label"
-                        >បញ្ជូលឈ្មោះព្រឹត្តិការណ៍</label
-                      >
+                      <label for="itemName" class="form-label">ឈ្មោះព្រឹត្តិការណ៍</label>
                       <input
                         type="text"
                         class="form-control"
@@ -380,16 +367,13 @@
 
                     <!-- Date -->
                     <div class="mb-3">
-                      <label for="itemDate" class="form-label"
-                        >កាលបរិច្ឆេទ</label
-                      >
+                      <label for="itemDate" class="form-label">កាលបរិច្ឆេទ</label>
                       <input type="date" class="form-control" id="itemDate" />
                     </div>
+
                     <!-- Location -->
                     <div class="mb-3">
-                      <label for="itemLocation" class="form-label"
-                        >ទីកន្លែង</label
-                      >
+                      <label for="itemLocation" class="form-label">ទីកន្លែង</label>
                       <input
                         type="text"
                         class="form-control"
@@ -397,97 +381,86 @@
                         placeholder="សូមបញ្ចូលទីកន្លែង"
                       />
                     </div>
+
                     <!-- Time -->
-                    <div class="mb-3">
-                      <label for="itemTime" class="form-label"
-                        >ម៉ោងចាប់ផ្តើម</label
-                      >
-                      <input type="time" class="form-control" id="itemTime" />
+                    <div class="row">
+                      <div class="col-md-6 mb-3">
+                        <label for="itemTime" class="form-label">ម៉ោងចាប់ផ្តើម</label>
+                        <input type="time" class="form-control" id="itemTime" />
+                      </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="itemTimeEnd" class="form-label">ម៉ោងបញ្ចប់</label>
+                        <input type="time" class="form-control" id="itemTimeEnd" />
+                      </div>
                     </div>
-                    <div class="mb-3">
-                      <label for="itemTimeEnd" class="form-label"
-                        >ម៉ោងបញ្ចប់</label
-                      >
-                      <input
-                        type="time"
-                        class="form-control"
-                        id="itemTimeEnd"
-                      />
-                    </div>
+
                     <!-- Link -->
                     <div class="mb-3">
-                      <label for="itemLink" class="form-label"
-                        >តំណរភ្ជាប់ចុះឈ្មោះ</label
-                      >
+                      <label for="itemLink" class="form-label">តំណរភ្ជាប់ចុះឈ្មោះ</label>
                       <input
-                        type="text"
+                        type="url"
                         class="form-control"
                         id="itemLink"
                         placeholder="សូមបញ្ចូលតំណរភ្ជាប់"
                       />
                     </div>
+
                     <!-- Upload Image -->
                     <div class="mb-3">
-                      <label for="itemImage" class="form-label"
-                        >បញ្ចូលរូបភាពព្រឹត្តិការណ៍</label
-                      >
+                      <label for="itemImage" class="form-label">រូបភាពព្រឹត្តិការណ៍</label>
                       <input class="form-control" type="file" id="itemImage" />
                     </div>
 
                     <!-- Contact -->
-                    <div class="mb-3">
-                      <label for="contactInfo" class="form-label"
-                        >ទំនាក់ទំនងតាមលេខទូរស័ព្ទ</label
-                      >
-                      <input
-                        type="text"
-                        class="form-control"
-                        id="contactInfo"
-                        placeholder="លេខទូរស័ព្ទ"
-                      />
-                    </div>
-                    <div class="mb-3">
-                      <label for="contactemail" class="form-label"
-                        >ទំនាក់ទំនងតាមអ៊ីមែល</label
-                      >
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="contactemail"
-                        placeholder="អ៊ីមែល"
-                      />
+                    <div class="row">
+                      <div class="col-md-6 mb-3">
+                        <label for="contactInfo" class="form-label">លេខទូរស័ព្ទ</label>
+                        <input
+                          type="tel"
+                          class="form-control"
+                          id="contactInfo"
+                          placeholder="លេខទូរស័ព្ទ"
+                        />
+                      </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="contactemail" class="form-label">អ៊ីមែល</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="contactemail"
+                          placeholder="អ៊ីមែល"
+                        />
+                      </div>
                     </div>
 
                     <!-- Description -->
                     <div class="mb-3">
-                      <label for="itemDescription" class="form-label"
-                        >អំពីព្រឹត្តិការណ៍</label
-                      >
+                      <label for="itemDescription" class="form-label">អំពីព្រឹត្តិការណ៍</label>
                       <textarea
                         class="form-control"
                         id="itemDescription"
-                        rows="3"
+                        rows="4"
                         placeholder="សូមសរសេរពិពណ៌នាអំពីព្រឹត្តិការណ៍..."
                       ></textarea>
                     </div>
 
                     <!-- Buttons -->
-                    <button
-                      type="button"
-                      class="btn btn-success"
-                      data-bs-toggle="modal"
-                      data-bs-target="#exampleModal "
-                    >
-                      <i class="bi bi-check-circle-fill"></i>
-                      បញ្ជូន
-                    </button>
-                    <a
-                      type="button"
-                      class="btn btn-secondary"
-                      href="used.html#user-posts"
-                      ><i class="fa-solid fa-arrow-left"></i>
-                      ត្រឡប់
-                    </a>
+                    <div class="d-flex justify-content-between">
+                      <a
+                        class="btn btn-secondary"
+                        href="used.html#user-posts"
+                      >
+                        <i class="fa-solid fa-arrow-left"></i> ត្រឡប់
+                      </a>
+                      <button
+                        type="button"
+                        class="btn btn-success"
+                        data-bs-toggle="modal"
+                        data-bs-target="#exampleModal"
+                      >
+                        <i class="bi bi-check-circle-fill"></i> បញ្ជូន
+                      </button>
+                    </div>
 
                     <!-- Modal -->
                     <div
@@ -503,9 +476,10 @@
                             <i
                               class="bi bi-check-circle-fill text-success"
                               style="font-size: 60px"
-                            ></i
-                            ><br />
-                            វត្ថុរបស់អ្នកត្រូវបានដាក់បញ្ចូលដោយជោគជ័យ។
+                            ></i>
+                            <p class="mt-3 mb-0">
+                              វត្ថុរបស់អ្នកត្រូវបានដាក់បញ្ចូលដោយជោគជ័យ។
+                            </p>
                           </div>
                         </div>
                       </div>
@@ -518,6 +492,8 @@
         </div>
       </section>
     </main>
+
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
