--- a/register.html
+++ b/register.html
@@ -1,90 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in | Sign up</title>
     <!-- css  -->
-    <link rel="stylesheet" href="assets/chhorng/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Suo LyLay  -->
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/theme.css" />
     <!-- bs5  -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <!-- js  -->
-    <link rel="stylesheet" href="assets/chhorng/javascript.js">
-</head>
+    <link rel="stylesheet" href="assets/chhorng/javascript.js" />
+  </head>
 
-<body class="register-page">
+  <body class="register-page">
     <main>
-        <section class="login-area">
-            <div class="container">
-                <div class="row justify-content-center align-items-center" style="height: 100vh;">
-                    <div class="col-lg-9">
-                        <div class="row g-0">
-                            <!-- left side  -->
-                            <div class="col-lg-6">
-                                <div class="bg-dark align-content-center py-19 d-none d-md-block"
-                                    style="height: 500px;">
-                                    <div class="card border-0 rounded-0 bg-transparent">
-                                        <div class="card-body text-center">
-                                            <h1 class="text-light display-5 fw-bolder">Let's Get Started</h1>
-                                            <p class="text-light">Join us and unlock our potential.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- right side  -->
-                            <div class="col-lg-6">
-                                <div class="bg-black " style="height: 500px;">
-                                    <h2 class="fw-bolder pb-4 pt-4 text-success ps-9">បង្កើតគណនី</h2>
-                                    <form action="" class="row text-center" novalidate>
-                                        <div class="col-lg-12">
-                                            <div class="mb-4" style="padding: 0 80px;">
-                                                <input type="text" id="" placeholder="បញ្ចូលឈ្មោះ" required
-                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="mb-4" style="padding: 0 80px;">
-                                                <input type="email" id="" placeholder="បញ្ចូលអ៊ីមែល" required
-                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="mb-4" style="padding: 0 80px;">
-                                                <input type="password" id="" placeholder="បង្កើតលេខសម្ងាត់" required
-                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="mb-5" style="padding: 0 80px;">
-                                                <input type="password" id="" placeholder="បញ្ជាក់លេខសម្ងាត់" required
-                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-2 col-md-7 col-lg-7  text-center m-auto mb-1">
-                                            <button class="btn btn-success w-lg-100 w-75 fw-bolder" type="submit">ចុះឈ្មោះ</button>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div
-                                                class="d-flex justify-content-end align-items-center mt-4 justify-content-md-center justify-content-center">
-                                                <p class="text-secondary fs-6 align-items-center p-0 m-0">មានគណនីរួចហើយ? </p>
-                                                <a class="text-success pe-lg-15 ps-2 pe-md-0" href="signin.html"
-                                                    target="_parent">ចូលគណនី</a>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+      <section class="login-area">
+        <div class="container">
+          <div
+            class="row justify-content-center align-items-center"
+            style="height: 100vh"
+          >
+            <div class="col-lg-9">
+              <div class="row g-0">
+                <!-- left side  -->
+                <div class="col-lg-6">
+                  <div
+                    class="bg-dark align-content-center py-19 d-none d-md-block"
+                    style="height: 500px"
+                  >
+                    <div class="card border-0 rounded-0 bg-transparent">
+                      <div class="card-body text-center">
+                        <h1 class="text-light display-5 fw-bolder">
+                          Let's Get Started
+                        </h1>
+                        <p class="text-light">
+                          Join us and unlock our potential.
+                        </p>
+                      </div>
                     </div>
+                  </div>
                 </div>
+                <!-- right side  -->
+                <div class="col-lg-6">
+                  <div class="bg-black" style="height: 500px">
+                    <h2 class="fw-bolder pb-4 pt-4 text-success ps-9">
+                      បង្កើតគណនី
+                    </h2>
+                    <form action="" class="row text-center" novalidate>
+                      <div class="col-lg-12">
+                        <div class="mb-4" style="padding: 0 80px">
+                          <input
+                            type="text"
+                            id=""
+                            placeholder="បញ្ចូលឈ្មោះ"
+                            required
+                            class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light"
+                          />
+                        </div>
+                      </div>
+                      <div class="col-lg-12">
+                        <div class="mb-4" style="padding: 0 80px">
+                          <input
+                            type="email"
+                            id=""
+                            placeholder="បញ្ចូលអ៊ីមែល"
+                            required
+                            class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light"
+                          />
+                        </div>
+                      </div>
+                      <div class="col-lg-12">
+                        <div class="mb-4" style="padding: 0 80px">
+                          <input
+                            type="password"
+                            id=""
+                            placeholder="បង្កើតលេខសម្ងាត់"
+                            required
+                            class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light"
+                          />
+                        </div>
+                      </div>
+                      <div class="col-lg-12">
+                        <div class="mb-5" style="padding: 0 80px">
+                          <input
+                            type="password"
+                            id=""
+                            placeholder="បញ្ជាក់លេខសម្ងាត់"
+                            required
+                            class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light"
+                          />
+                        </div>
+                      </div>
+                      <div
+                        class="col-sm-2 col-md-7 col-lg-7 text-center m-auto mb-1"
+                      >
+                        <a
+                          href="index.html"
+                          class="btn btn-success w-100 fw-bolder"
+                        >
+                          ចុះឈ្មោះ
+                        </a>
+                      </div>
+                      <div class="col-lg-12">
+                        <div
+                          class="d-flex justify-content-end align-items-center mt-4 justify-content-md-center justify-content-center"
+                        >
+                          <p
+                            class="text-secondary fs-6 align-items-center p-0 m-0"
+                          >
+                            មានគណនីរួចហើយ?
+                          </p>
+                          <a
+                            class="text-success pe-lg-15 ps-2 pe-md-0"
+                            href="signin.html"
+                            target="_parent"
+                            >ចូលគណនី</a
+                          >
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
-<!-- js  -->
-<script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
+  </body>
+  <!-- js  -->
+  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </html>
