--- a/signin.html
+++ b/signin.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <!-- Font Awesome -->
     <link
@@ -145,7 +145,10 @@
                         />
                       </div>
                       <!-- Submit Button -->
-                      <a href="index.html" class="d-grid mb-3 w-75 m-auto text-decoration-none">
+                      <a
+                        href="index.html"
+                        class="d-grid mb-3 w-75 m-auto text-decoration-none"
+                      >
                         <button
                           class="btn btn-success rounded-pill"
                           type="submit"
@@ -233,7 +236,10 @@
                         />
                       </div>
                       <!-- Submit Button -->
-                      <a href="index.html" class="d-grid mb-3 w-75 m-auto text-decoration-none">
+                      <a
+                        href="dashboard.html"
+                        class="d-grid mb-3 w-75 m-auto text-decoration-none"
+                      >
                         <button
                           class="btn btn-success rounded-pill"
                           type="submit"
